force-app/main/default/objects/SFDC_MDF__c/fields/Remaining_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Accrual__c</fullName>
    <description>It&apos;s a difference between NCR Estimated Participation and NCR Approved.</description>
    <formula>IF( OR(Total_NCR_Approved__c  = 0,Total_NCR_Approved__c  = null), 0, Total_NCR_Estimated_Participation__c - Total_NCR_Approved__c - Released_Funds__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>