force-app/main/default/objects/SFDC_MDF__c/fields/Request_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Submission_Date__c</fullName>
    <description>Date when user submit the Request.</description>
    <label>Request Submission Date</label>
    <type>DateTime</type>
</CustomField>