force-app/main/default/objects/SFDC_MDF__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fund Requests</relationshipLabel>
    <relationshipName>Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>