force-app/main/default/objects/SFDC_MDF__c/fields/Total_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Cost__c</fullName>
    <description>Total Actual Cost of the MDF Activity.</description>
    <label>Total Actual Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>