force-app/main/default/objects/SFDC_MDF__c/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <label>Total Estimated Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>