force-app/main/default/objects/SFDC_MDF__c/fields/Total_NCR_Approved__c.field-meta.xml
<CustomField>
    <fullName>Total_NCR_Approved__c</fullName>
    <label>Total NCR Approved</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>