force-app/main/default/objects/SFDC_MDF__c/fields/Total_NCR_Estimated_Participation__c.field-meta.xml
<CustomField>
    <fullName>Total_NCR_Estimated_Participation__c</fullName>
    <description>Total Approved Reimbursement Limit of all Activity Line Item.</description>
    <label>Total Approved Reimbursement Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>