force-app/main/default/objects/SFDC_MDF__c/fields/Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference__c</fullName>
    <label>Transaction Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>