force-app/main/default/objects/SFDC_MDF__c/fields/Wave__c.field-meta.xml
<CustomField>
    <fullName>Wave__c</fullName>
    <inlineHelpText>Select the Wave of this request.</inlineHelpText>
    <label>Year Accrued</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2012 Wave1</fullName>
            </value>
            <value>
                <fullName>2012 Wave2</fullName>
            </value>
            <value>
                <fullName>2013 Wave1</fullName>
            </value>
            <value>
                <fullName>2013 Wave2</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>