force-app/main/default/objects/SFDC_MDF__c/fields/Year_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Submission__c</fullName>
    <formula>YEAR(DATEVALUE(Request_Submission_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>