force-app/main/default/objects/SFDC_MDF__c/validationRules/Activity_Date_Days_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Date_Days_In_Future</fullName>
    <active>true</active>
    <description>Confirm that the marketing activity date is a certain # weeks in the future</description>
    <errorConditionFormula>AND(
((ISPICKVAL(Status__c, &apos;Request Created&apos;) || ISPICKVAL(Status__c, &apos;Submitted for Approval&apos;)) &amp;&amp; (ISNEW() || ISCHANGED( Activity_Date__c )) &amp;&amp; (Activity_Date__c &lt; TODAY()+30)),
($User.ContactId  != null || $User.ContactId  != &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Activity start date must be greater than 30 days, Please select a valid Start Date.</errorMessage>
</ValidationRule>