force-app/main/default/objects/SFDC_MDF__c/validationRules/Activity_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_End_Date_Validation</fullName>
    <active>false</active>
    <description>Activity Stard Date Should be Less than Activity End Date.</description>
    <errorConditionFormula>End_Date__c  &lt;  Activity_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Activity End Date must be greater than Activity Start Date.</errorMessage>
</ValidationRule>