force-app/main/default/objects/SFDC_MDF__c/validationRules/Amount_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Limits</fullName>
    <active>false</active>
    <description>Incorporate limits on the requested amount</description>
    <errorConditionFormula>OR(     Amount__c &lt; 500,    Amount__c &gt; 20000 )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The amount requested must be between $500 and $20,000</errorMessage>
</ValidationRule>