force-app/main/default/objects/SFDC_MDF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Partner_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>