force-app/main/default/objects/SFDC_MDF__c/listViews/Channel_Operation_Team_SFDC_MDF.listView-meta.xml
<ListView>
    <fullName>Channel_Operation_Team_SFDC_MDF</fullName>
    <filterScope>Queue</filterScope>
    <label>Channel Operation Team</label>
    <queue>Channel_Operation_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>