force-app/main/default/objects/SFDC_MDF__c/listViews/CreatedToday.listView-meta.xml
<ListView>
    <fullName>CreatedToday</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>