force-app/main/default/objects/SFDC_MDF__c/listViews/MDFs_Of_Partners_in_Financial_Division.listView-meta.xml
<ListView>
    <fullName>MDFs_Of_Partners_in_Financial_Division</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_LOB__c</field>
        <operation>equals</operation>
        <value>FINANCIAL</value>
    </filters>
    <label>MDFs Of Partners in Financial Division</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>