force-app/main/default/objects/SFDC_MDF__c/listViews/MDFs_Submitted_to_Opps_Team.listView-meta.xml
<ListView>
    <fullName>MDFs_Submitted_to_Opps_Team</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Assigned_To_Opps_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MDFs Submitted to Opps Team</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>