force-app/main/default/objects/SFDC_MDF__c/listViews/Request_Pending_for_Approvals.listView-meta.xml
<ListView>
    <fullName>Request_Pending_for_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CAM__c</columns>
    <columns>RCL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUserCAMorRCL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <label>Request Pending for Approvals</label>
</ListView>